# rem-cli

./: .gitattributes  .gitignore  .lia.cache  Cargo.toml  Config.toml  LICENSE  README.md  RemCli.v  changelog.md  fix_tests.py  intellij_implementation.kt  notes.txt  rem_cli.llbc  rust-toolchain.toml  sasha_example.rs  setup_aeneas.sh  tmp.txt
.github/workflows/: ci.yml
eval/: readme.md
eval/extraction/: 0_break_loop.rs  2s_comments_in_block_expr.rs  3s_extract_from_nested.rs  6_extract_return_stmt.rs  8_no_args_if_let_else.rs
scraping/: 0_scraper.py  1_grab_files.py  2_grab_repos.py  cases.csv  extracts.csv  extracts_old.csv  grab_files.py  repos.txt  requirements.in  requirements.txt  scraper.py
scraping/scraped_files/rust/: 1c584188ff217b299fc2dfb6d33ecc9b4daba8eb__src_tools_rust-analyzer_crates_ide-diagnostics_src_lib.rs  1d679446b01e65f9bc9ae609d0ae1e4a9c0ccaa3__src_librustdoc_doctest_make.rs  2147783b79641e76a7e5edde92d01ab2b7b1c929__compiler_rustc_mir_transform_src_coverage_spans.rs  2147783b79641e76a7e5edde92d01ab2b7b1c929__compiler_rustc_monomorphize_src_collector.rs  2147783b79641e76a7e5edde92d01ab2b7b1c929__compiler_rustc_pattern_analysis_src_rustc.rs  2147783b79641e76a7e5edde92d01ab2b7b1c929__src_librustdoc_lib.rs  2147783b79641e76a7e5edde92d01ab2b7b1c929__src_tools_clippy_clippy_dev_src_update_lints.rs  2147783b79641e76a7e5edde92d01ab2b7b1c929__src_tools_clippy_clippy_lints_src_methods_manual_c_str_literals.rs  2147783b79641e76a7e5edde92d01ab2b7b1c929__src_tools_clippy_clippy_lints_src_utils_author.rs  2147783b79641e76a7e5edde92d01ab2b7b1c929__src_tools_miri_src_concurrency_thread.rs  28174fc1a0525888615c8bce8f4ecec13c85ecc6__src_tools_rust-analyzer_crates_ide-assists_src_handlers_remove_unused_imports.rs  28174fc1a0525888615c8bce8f4ecec13c85ecc6__src_tools_rust-analyzer_crates_ide-db_src_documentation.rs  295a8d56f5a7d200599d587fb52bf217b9aee363__compiler_rustc_lint_src_transmute.rs  29d97cdabe21aa4a243b368555a47a33ad0cee8b__src_librustdoc_html_render_mod.rs  3646a09811bfca55e976117b4c2b8bf0b4cb5aee__src_librustdoc_html_render_mod.rs  38081f22c2d7380f272aa1d7fa9b935637701c2d__compiler_rustc_hir_analysis_src_check_wfcheck.rs  3e674b06b5c74adea662bd0b0b06450757994b16__src_librustdoc_clean_utils.rs  52f2c45dee5211418e762789ad63e3ae56d9f3bf__tests_ui_repeat-expr_copy-check-deferred-before-fallback.rs  560aec13ba62c1a8fd7b2f9fbeada61096809613__src_librustdoc_html_render_print_item.rs  5b47d340d360760dd6d33587c0431414cf550ac9__src_librustdoc_clean_utils.rs  5cc27332b56464f6dc76fdc611959f9187889ac9__src_tools_unstable-book-gen_src_main.rs  7fe82632854ce64dd98044163b0e0e61be51fb04__compiler_rustc_codegen_llvm_src_va_arg.rs  89c21f7c1af83cfbd862e08e716026f1c357a316__compiler_rustc_ast_src_mut_visit.rs  910e640f9b92b558021370018c6ddfbef66e4991__clippy_dev_src_fmt.rs  910e640f9b92b558021370018c6ddfbef66e4991__clippy_dev_src_rename_lint.rs  910e640f9b92b558021370018c6ddfbef66e4991__clippy_dev_src_update_lints.rs  910e640f9b92b558021370018c6ddfbef66e4991__clippy_dev_src_utils.rs  912981a9eab199a6429d3c65a58f1b80487620ea__tests_ui_repeat-expr_copy-check-deferred-before-fallback.rs  95a2212587f1b8500af1ac630322b0cb2e030c61__src_librustdoc_html_render_mod.rs  95a2212587f1b8500af1ac630322b0cb2e030c61__src_librustdoc_html_render_print_item.rs  (+6 more)
scripts/: build.sh  build_fresh.sh  build_release.sh  build_release_fresh.sh  run.sh  run_fresh.sh
src/: Primitives.v  error.rs  local_config.rs  logging.rs  main.rs  refactor_config.rs  rem_args.rs  tmp.txt  utils.rs
src/commands/: borrower.rs  controller.rs  convert.rs  extract.rs  mod.rs  repairer.rs  run.rs  run_short.rs  verify.rs
src/messages/: about.rs  author.rs  help.rs  mod.rs  version.rs
src/prefactor/: convert.rs  convert_to_llbc.rs  extract_body.rs  lsp_call.rs  mod.rs  verify.rs
src/refactor/: borrow.rs  dump_methods.rs  extract_function.rs  mod.rs  non_local_controller.rs  refactor_main.rs  repair_lifetime.rs  throughput.rs
src/tests/: borrower.rs  controller.rs  extract.rs  mod.rs  repairer.rs  utils.rs
src_tests/extract/input/extract_method_from_trait_with_multiple_existing_impl_blocks/: Cargo.toml
src_tests/extract/input/extract_method_from_trait_with_multiple_existing_impl_blocks/src/: main.rs
src_tests/extract/input/multi_variables_defined_inside_and_used_after_mutably_no_ret/: Cargo.toml
src_tests/extract/input/multi_variables_defined_inside_and_used_after_mutably_no_ret/src/: main.rs
src_tests/repairer/input/: borrow.rs  (+6 more)
test_crates/sample_project/: Cargo.toml  sample_project.llbc
test_crates/sample_project_ref/: Cargo.toml
tools/: charon  charon-driver
(+786 files in other folders)
