[package]
name = "rem-cli"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Britton <matt.britton@anu.edu.au>"]
license = "MIT"
description = "CLI interface for the REM toolchain. Built to be implemented into the VSCode extension for REM"
repository = "https://github.com/RuleBrittonica/rem-cli"
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]

# Listed here in the order they are used in the program. Because why not?
# rem-extract    = { version = "0.1.2" }
# rem-controller = { version = "0.1.3" }
# rem-borrower   = { version = "0.1.3" }
# rem-repairer   = { version = "0.1.2" }
# rem-utils      = { version = "0.1.3" }

rem-extract     = { path = "../rem-extract/rem-extract" }
rem-controller  = { path = "../rem-controller" }
rem-borrower    = { path = "../rem-borrower" }
rem-repairer    = { path = "../rem-repairer" }
rem-utils       = { path = "../rem-utils" }
rem-verification = { path = "../rem-verification/verifyer" }

clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.25"
flexi_logger = "0.29.2"
colored = "3.0.0"
git2 = "0.20.0"
ra_ap_vfs = "0.0.262"
camino = "1.1.9"
lazy_static = "1.5.0"
config = "0.15.7"
serde = "1.0.217"

[build-dependencies]

[dev-dependencies]
tempfile = "3.13"

[features]
default = []

[[bin]]
name = "rem-cli"
path = "src/main.rs"

# Despite only rem-extract using ra_ap_rust-analyzer, we must patch it here as
# well to ensure that we point to the correct file.
# [patch.crates-io]
# ra_ap_rust-analyzer = { path = "../rem-extract/patches/ra_ap_rust-analyzer/" }