[package]
name = "extract_method_from_trait_with_multiple_existing_impl_blocks"
version = "0.1.0"
edition = "2021"

rust-version = "1.80"

authors = ["N/A"]

license = "MIT"

repository = "https://github.com/RuleBrittonica/rem-testfiles"

description = "Test Data"


[dependencies]

