[package]
name = "multi_variables_defined_inside_and_used_after_mutably_no_ret"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]

[lints]
workspace = true
